# traceit-back

./: .gitignore  .travis.yml  build.sh  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  django.yml
backend/: __init__.py  asgi.py  celery.py  permissions.py  settings.py  urls.py  wsgi.py
backend/settings/: base.py  dev.py  prod.py
common/: admin.py  models.py  serializers.py
common/migrations/: 0001_initial.py
company/: admin.py  constants.py  models.py  serializers.py  urls.py  views.py
company/migrations/: 0001_initial.py  0002_alter_company_description.py  0002_alter_company_options_alter_establishment_options_and_more.py  0003_alter_company_country.py  0003_establishment_description.py  0004_company_invitation_code_alter_company_fiscal_id.py  0004_remove_establishment_image_establishment_album.py  0005_alter_company_tradename.py  0006_alter_company_options_alter_establishment_options_and_more.py
history/: admin.py  constants.py  models.py  serializers.py  urls.py  views.py
history/migrations/: 0001_initial.py  0002_history_lot_id_history_parcel_history_product_and_more.py  0002_initial.py  0003_alter_history_published.py  0003_weatherevent_generalevent_chemicalevent.py  0004_alter_chemicalevent_history_and_more.py  (+15 more)
product/: admin.py  models.py  serializers.py  urls.py  views.py
reviews/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
users/: admin.py  auth.py  constants.py  managers.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
(+19 files in other folders)
